--- a/笔记.md
+++ b/笔记.md
@@ -1,22 +1,6 @@
-# Hello World
+# 使用脚手架搭建工程
 
-直接在页面上使用React，应用下面的JS
+官方：create-react-app
+第三方：next.js、umi.js
 
-```html
-<!-- React的核心库，与宿主环境无关 -->
-    <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
-    <!-- 依赖核心库，将核心库的功能与页面结合 -->
-    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-    <script crossorigin src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-```
-
-## React.createElement
-
-创建一个React元素，称作虚拟dom，本质上是一个对象
-
-1. 参数1：元素类型，如果是字符串，一个普通的HTML元素
-2. 参数2：元素的属性，一个对象
-
-## JSX
-
-JS的扩展语法，需要使用babel进行转义
+凡是使用JSX的文件，必须导入React
