--- a/笔记.md
+++ b/笔记.md
@@ -1,6 +1,27 @@
-# 使用脚手架搭建工程
+# JSX
 
-官方：create-react-app
-第三方：next.js、umi.js
+## 什么是JSX
 
-凡是使用JSX的文件，必须导入React
+- Facebook起草的JS扩展语法
+- 本质是一个JS对象，会被babel编译，最终会被转换为React.createElement
+- 每个JSX表达式，有且仅有一个根节点
+    - React.Fragment
+- 每个JSX元素必须结束（XML规范）
+
+## 在JSX中嵌入表达式
+
+- 将表达式作为内容的一部分
+    - null和undefined，false不会显示
+    - 普通对象，不可以作为子元素
+    - 可以放置React元素对象
+- 将表达式作为元素属性
+- 属性使用小驼峰命名法
+- 防止注入攻击
+    - 自动编码
+    - dangerouslySetInnerHTML
+
+
+## 元素的不可变性
+
+- 虽然JSX元素是一个对象但是该对象中的所有属性不可更改
+- 如果确实需要更改元素的属性，需要重新创建JSX元素
