--- a/高阶组件.md
+++ b/高阶组件.md
@@ -7,3 +7,7 @@ HOC：Higher-Order Component,高阶组件，以组件作为参数，并返回一
 
 >举例 ：20个组件，每个组件在创建组件和销毁组件时，需要做日志记录
 >20个组件，他们需要显示一些内容，得到的数据结构完全一致
+
+**注意**
+1. 不要再render中使用高阶组件
+2. 不要在高阶组件内部更改传入的组件
