--- a/5-2.两种模式.md
+++ b/5-2.两种模式.md
@@ -31,4 +31,16 @@ url地址组成
 
 ## Borswer History Router 浏览器历史记录路由
 
-History表示浏览器
+History表示浏览器的历史记录，它使用栈的方式储存。
+
+1. history.length:获取栈中的数据量
+2. history.pushState:向当前历史记录栈中加入一条新的记录
+    1. 参数1：附件的数据，自定义的数据，可以是任何类型
+    2. 参数2：页面标题，目前大部分浏览器不支持
+    3. 参数3：新的地址
+3. history.replaceState:将当前指针指向的历史记录，替换为某个记录
+    1. 参数1：附件的数据，自定义的数据，可以是任何类型
+    2. 参数2：页面标题，目前大部分浏览器不支持
+    3. 参数3：新的地址
+
+根据页面的路径决定渲染那个组件
